--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,112 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.mindovermatter.fericity.MainActivity">
+    tools:context="com.mindovermatter.fericity.MainActivity"
+    android:background="#aec5ff">
+
+    <RelativeLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:background="#7799ee"
+        android:gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:layout_width="43dp"
+            android:layout_height="70dp"
+            android:id="@+id/imageView2"
+            android:src="@drawable/fericity_icons_logo"
+            android:layout_alignBottom="@+id/header"
+            android:scaleType="centerCrop"
+            android:layout_alignParentTop="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ericity"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:id="@+id/textView"
+            android:layout_alignBottom="@+id/imageView2"
+            android:layout_toRightOf="@+id/imageView2"
+            android:layout_toEndOf="@+id/imageView2"
+            android:layout_marginBottom="20dp" />
+
+
+    </RelativeLayout>
+
+    <TableLayout
+        android:layout_width="220dp"
+        android:layout_height="80dp"
+        android:background="#FFFFFF"
+        android:layout_marginTop="120dp">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:id="@+id/editText"
+            android:layout_alignBottom="@+id/email_address"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="#eee" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:id="@+id/imageView3"
+                android:src="@drawable/camera_icon"
+                android:layout_marginRight="130dp"
+                android:layout_marginTop="5dp"
+                android:background="gray"
+                android:layout_marginLeft="10dp" />
+
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:text="POST"
+                android:id="@+id/button"
+                android:background="#7799ee"
+                android:layout_column="7"
+                android:layout_marginTop="5dp" />
+        </TableRow>
+
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="220dp"
+        android:layout_height="270dp"
+        android:layout_marginTop="220dp"
+        android:background="#FFFFFF">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:id="@+id/editText2"
+            android:background="#eee"
+            android:layout_marginTop="190dp" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/imageView4"
+            android:src="@drawable/camera_icon"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="130dp" />
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="120dp"
+        android:layout_height="220dp"
+        android:layout_marginLeft="240dp"
+        android:layout_marginTop="240dp"
+        android:background="#FFA3DEE0"></TableLayout>
 
 </RelativeLayout>
