--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.mindovermatter.fericity.MainActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#aec5ff">
 
     <RelativeLayout
@@ -32,13 +28,12 @@
             android:layout_height="wrap_content"
             android:text="ericity"
             android:textColor="#FFFFFF"
-            android:textSize="20sp"
+            android:textSize="34sp"
             android:id="@+id/textView"
             android:layout_alignBottom="@+id/imageView2"
             android:layout_toRightOf="@+id/imageView2"
             android:layout_toEndOf="@+id/imageView2"
             android:layout_marginBottom="20dp" />
-
 
     </RelativeLayout>
 
@@ -46,7 +41,9 @@
         android:layout_width="220dp"
         android:layout_height="80dp"
         android:background="#FFFFFF"
-        android:layout_marginTop="120dp">
+        android:layout_marginTop="117dp"
+        android:id="@+id/tableLayout3"
+        android:layout_marginLeft="10dp">
 
         <EditText
             android:layout_width="wrap_content"
@@ -68,7 +65,6 @@
                 android:src="@drawable/camera_icon"
                 android:layout_marginRight="130dp"
                 android:layout_marginTop="5dp"
-                android:background="gray"
                 android:layout_marginLeft="10dp" />
 
             <Button
@@ -87,30 +83,196 @@
         android:layout_width="220dp"
         android:layout_height="270dp"
         android:layout_marginTop="220dp"
-        android:background="#FFFFFF">
+        android:background="#FFFFFF"
+        android:id="@+id/tableLayout"
+        android:layout_marginLeft="10dp">
 
-        <EditText
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="70dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RelativeLayout
+                    android:layout_width="70dp"
+                    android:layout_height="match_parent"
+                    android:background="#FF655C5C"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/relativeLayout"></RelativeLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:id="@+id/textView8"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toRightOf="@+id/relativeLayout"
+                    android:layout_toEndOf="@+id/relativeLayout"
+                    android:layout_marginLeft="10dp" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:id="@+id/editText2"
+            android:layout_height="170dp"
+            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry&apos;s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+            android:id="@+id/textView7"
             android:background="#eee"
-            android:layout_marginTop="190dp" />
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp" />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:id="@+id/imageView4"
-            android:src="@drawable/camera_icon"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="130dp" />
     </TableLayout>
 
     <TableLayout
         android:layout_width="120dp"
-        android:layout_height="220dp"
-        android:layout_marginLeft="240dp"
-        android:layout_marginTop="240dp"
-        android:background="#FFA3DEE0"></TableLayout>
+        android:layout_height="234dp"
+        android:layout_marginTop="34dp"
+        android:background="#FFA3DEE0"
+        android:layout_alignTop="@+id/tableLayout"
+        android:layout_alignRight="@+id/header"
+        android:layout_alignEnd="@+id/header"
+        android:id="@+id/tableLayout2"
+        android:layout_marginRight="10dp">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Safety Mode"
+            android:id="@+id/textView2"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp" />
+
+            <ImageView
+                android:layout_width="34dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView4"
+                android:src="@drawable/fericity_icons_safetymode"
+                android:layout_marginLeft="70dp"
+                android:layout_gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Safety Mode"
+                android:id="@+id/textView3"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp" />
+
+            <ImageView
+                android:layout_width="34dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView6"
+                android:src="@drawable/fericity_icons_safetymodesetting"
+                android:layout_marginLeft="70dp"
+                android:layout_gravity="right" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Auto Report"
+                android:id="@+id/textView4"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp" />
+
+            <ImageView
+                android:layout_width="34dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView7"
+                android:src="@drawable/fericity_icons_report"
+                android:layout_marginLeft="70dp"
+                android:layout_gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Map"
+                android:id="@+id/textView5" />
+
+            <ImageView
+                android:layout_width="34dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView8"
+                android:src="@drawable/fericity_icons_map"
+                android:layout_marginLeft="70dp"
+                android:layout_gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="About us"
+                android:id="@+id/textView6"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="20dp" />
+
+            <ImageView
+                android:layout_width="34dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView9"
+                android:src="@drawable/fericity_icons_about"
+                android:layout_marginLeft="70dp"
+                android:layout_gravity="right" />
+        </LinearLayout>
+
+    </TableLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_alignTop="@+id/tableLayout3"
+        android:layout_alignLeft="@+id/tableLayout2"
+        android:layout_alignStart="@+id/tableLayout2"
+        android:id="@+id/relativeLayout2"
+        android:background="#FF655C5C"
+        android:layout_marginRight="10dp"></RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name"
+        android:id="@+id/textView9"
+        android:layout_below="@+id/tableLayout3"
+        android:layout_alignLeft="@+id/relativeLayout2"
+        android:layout_alignStart="@+id/relativeLayout2"
+        android:layout_marginTop="17dp" />
 
 </RelativeLayout>
