--- a/app/src/main/res/layout/activity_safety.xml
+++ b/app/src/main/res/layout/activity_safety.xml
@@ -68,9 +68,9 @@
             android:src="@drawable/fericity_icons_stats"
             android:scaleType="fitCenter"
             android:layout_marginLeft="200dp"
-            android:layout_marginBottom="50dp"
             android:layout_gravity="right"
-            android:layout_marginTop="360dp" />
+            android:layout_marginTop="360dp"
+            android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
 </LinearLayout>
